--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ p.c {
         <div class="menu__wrapper d-none d-lg-block col-md-12">
           <nav class="">
             <ul>
-              <li><a href="#hello">Hello</a></li>
+              <li><a href="#hello">About</a></li>
               <li><a href="#resume">Skills Set</a></li>
               <li><a href="#portfolio">Recent projects</a></li>
               <li><a href="#testimonials">testimonials</a></li>
